--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .whaaaat {
+    -webkit-mask-image: -webkit-radial-gradient(white, black);
+  }
+}
