Fix directory divide li

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,14 @@
 @tailwind base;
+
+.directory-divide-y > li:not(:last-child):after {
+  content: '';
+  display: block;
+  width: calc(100% - 24px);
+  transform: translateX(24px);
+  height: 1px;
+  background: #333333;
+}
+
 @tailwind components;
 @tailwind utilities;
 
